# simple_clean_data_workflow

./: .gitignore  pyproject.toml
workflows/: simple_clean_data_workflow.py
